--- a/Peer Assignment 1/PA1_template.Rmd
+++ b/Peer Assignment 1/PA1_template.Rmd
@@ -31,12 +31,12 @@ The dataset is stored in a comma-separated-value (CSV) file and there are a tota
 
 ### Loading and preprocessing the data
 
-1. Load the data into R
+1\. Load the data into R
 ```{r}
 activity_all <- read.csv("activity.csv")
 ```
     
-2. Process/transform the data (if necessary) into a format suitable for your analysis
+2\. Process/transform the data (if necessary) into a format suitable for your analysis
 Not done at this step
   
 ----------------------------------------------------------------------------------
@@ -49,17 +49,17 @@ For this part of the assignment, you can ignore the missing values in the datase
 activity <- na.omit(activity_all)
 ```
 
-1. Calculate the total number of steps taken per day
+1\. Calculate the total number of steps taken per day
 ```{r}
 total_steps <- aggregate(steps ~ date, activity, sum)
 ```
      
-2. Make a histogram of the total number of steps taken each day
+2\. Make a histogram of the total number of steps taken each day
 ```{r}
 hist(total_steps$steps, xlab="Total Number of Steps per Day", main="Total Number of Steps Taken Each Day", col="red")
 ```
      
-3. Calculate and report the mean and median of the total number of steps taken per day
+3\. Calculate and report the mean and median of the total number of steps taken per day
 ```{r}
 ## The mean of the total number steps taken per day
 mean(total_steps$steps)
@@ -71,7 +71,7 @@ median(total_steps$steps)
 
 ### What is the average daily activity pattern?
 
-1. Make a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+1\. Make a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 ```{r}
 ## First, calculate the average number of steps taken per 5-minute interval averaged across all days
 interval_steps <- aggregate(steps ~ interval, activity, FUN="mean")
@@ -80,7 +80,7 @@ interval_steps <- aggregate(steps ~ interval, activity, FUN="mean")
 plot(interval_steps$interval, interval_steps$steps, type="l", ylab="Average Number of Steps Taken", xlab="5-Minute Interval", main="Average Number of Steps Taken Across All Days per Interval")
 ```
      
-2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+2\. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 ```{r}
 interval_steps[which.max(interval_steps$steps),]
 ```
@@ -90,16 +90,16 @@ interval_steps[which.max(interval_steps$steps),]
 ### Imputing missing values
 Note that there are a number of days/intervals where there are missing values (coded as `NA`). The presence of missing days may introduce bias into some calculations or summaries of the data.
 
-1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+1\. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
 ```{r}
 sum(is.na(activity_all$steps))
 ```
      
-2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+2\. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
       
 The missing values will be filled in with mean for that 5-minute interval. The original data set with the missing values is stored in `activity_all` and the average number of steps per interval is stored in the data set `interval_steps`
       
-3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+3\. Create a new dataset that is equal to the original dataset but with the missing data filled in.
 ```{r}
 ## Create a new dataset from original dataset the with missing value
 clean_data <- activity_all
@@ -115,7 +115,7 @@ for (i in 1:nrow(clean_data)){
 }
 ```
      
-4. Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+4\. Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 ```{r}
 ## Calculate the average number of steps taken each day from the new data set with the imputed values
 clean_data_sum <- aggregate(steps ~ date, clean_data, sum)
@@ -134,7 +134,7 @@ The mean does not differ and the median differs only slightly from the data set 
 
 Use the dataset with the filled-in missing values for this part (`clean_data`).
 
-1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+1\. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
 ```{r}
 ## First, covert the date variable from factor to date, use the weekday() function to obtain the day of the week and put this  into a new variable
 clean_data$days <- weekdays(as.Date(clean_data$date))
@@ -146,7 +146,7 @@ for (i in 1:length(clean_data$days)){
 clean_data$weekday <- as.factor(clean_data$weekday)
 ```
      
-2. Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+2\. Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
 ```{r fig.width = 8}
 ## First, calculate the average number of steps taken per 5-minute interval averaged across all day types
 weekdays_means <- aggregate(clean_data$steps, by=list(clean_data$days, clean_data$weekday, clean_data$interval), FUN="mean")
